--- a/ITESOLog-in/app/src/main/res/values/colors.xml
+++ b/ITESOLog-in/app/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="blue">#003D79</color>
+    <color name="primaryDark">#002C5C</color>
+    <color name="accent">#FF7C0A</color>
 </resources>
